--- a/index.html
+++ b/index.html
@@ -98,38 +98,38 @@
             <div class="productBox">
                 <img src="./img/undraw_watch_application_uhc9.svg" alt="Alt Text">
                 <p>Black Genuine Leather Bags.</p>
-                <a href="">$23.3</a>
+                <a href="">$37.6</a>
                 <a href="" class="Buy">Add To Cart</a>
             </div> 
             <div class="productBox">
                 <img src="./img/undraw_in_no_time_6igu.svg" alt="Alt Text">
                 <p>Black Genuine Leather Bags.</p>
-                <a href="">$23.3</a>
+                <a href="">$28.3</a>
                 <a href="" class="Buy">Add To Cart</a>
             </div> 
             <div class="productBox">
                 <img src="./img/undraw_smartwatch_74tv.svg" alt="Alt Text">
                 <p>Black Genuine Leather Bags.</p>
-                <a href="">$23.3</a>
+                <a href="">$19.4.</a>
                 <a href="" class="Buy">Add To Cart</a>
             </div> 
             <div class="product"></div>
             <div class="productBox">
                 <img src="./img/undraw_watch_application_uhc9.svg" alt="Alt Text">
                 <p>Black Genuine Leather Bags.</p>
-                <a href="">$23.3</a>
+                <a href="">$37.6</a>
                 <a href="" class="Buy">Add To Cart</a>
             </div> 
             <div class="productBox">
                 <img src="./img/undraw_in_no_time_6igu.svg" alt="Alt Text">
                 <p>Black Genuine Leather Bags.</p>
-                <a href="">$23.3</a>
+                <a href="">$28.4</a>
                 <a href="" class="Buy">Add To Cart</a>
             </div> 
             <div class="productBox">
                 <img src="./img/undraw_smartwatch_74tv.svg" alt="Alt Text">
                 <p>Black Genuine Leather Bags.</p>
-                <a href="">$23.3</a>
+                <a href="">$19.4</a>
                 <a href="" class="Buy">Add To Cart</a>
             </div>
         </div>
