--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/70a642cd7c.js"></script>
     <script src="https://kit.fontawesome.com/944d84bbb4.js" crossorigin="anonymous"></script>
-    <title>project2 </title>
+    <title> E-commerce Website </title>
 </head>
 <body>
     <div class="container">
